--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,11 @@ server.port=8080
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/swag
+spring.datasource.url=jdbc:postgresql://localhost:5432/citizendb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
